--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
     "@liveblocks/client": "^1.9.8",
     "@liveblocks/react": "^1.9.8",
-    "@mui/material": "^5.15.10",
+    "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +13,9 @@
     "@uiw/react-color-wheel": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-music-player": "^1.2.3",
+    "react-player": "^2.15.1",
+    "react-redux": "^7.2.9",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
