--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-material-music-player": "^1.2.3",
     "react-player": "^2.15.1",
     "react-redux": "^7.2.9",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
