--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@liveblocks/client": "^1.9.8",
     "@liveblocks/react": "^1.9.8",
+    "@mediapipe/tasks-vision": "^0.10.12",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
     "@react-three/drei": "^9.102.6",
