--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@uiw/react-color-wheel": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-material-music-player": "^1.2.3",
     "react-player": "^2.15.1",
     "react-redux": "^7.2.9",
