--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-material-music-player": "^1.2.3",
     "react-player": "^2.15.1",
     "react-redux": "^7.2.9",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
